css/styles.css
/* Fonts, Colors and Background*/
@font-face {
    font-family: Poppins;
    src: url(/fonts/Poppins-Regular.woff2);
  }
:root{
    --accent-color: #FF3864;
    --color-one: #FFFFFF;
    --color-two: #2a7561;
    --color-three: #2B2D42;
    --color-four: #FFFDF7;
    --bg-image: url(/images/background.webp);
}
body,html{
    padding: 0;
    margin: 0;
    background-color: var(--color-one);
    font-family:'Poppins';
    font-size: 1rem;
}
h2{
    font-size: 1.25rem;
}
.logo img{
    width: 100px;
    filter: invert(100%) sepia(99%) saturate(0%) hue-rotate(14deg) brightness(103%) contrast(100%);
}   
.col2 button{
    background-color: var(--accent-color);
    color: var(--color-one);
    border: 0;
    font-size: 1rem;
    border-radius: 5px;
}
.col2 button:hover{
    background-color: #2a7561;
    cursor: pointer;
}
.col1{
    background-image: var(--bg-image);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}
.credits, .credits a{
    color: var(--color-one);
    display: flex;
    justify-content: center;
    text-align: center;
    margin-top: auto;
    padding-bottom: 0.3rem;
}
.col2{
        background-color: rgb(240, 240, 240);
        flex-grow: 1;
}
.formwrapper{
    background-color: var(--color-one);
}
legend{
    font-weight: 600;
}
h2, p, label, input, legend,fieldset{
    color: var(--color-three);
}
p a{
    font-weight: 600;
    text-decoration: none;
    color: var(--accent-color);
}
p a:hover{
    color: var(--color-two);
}
input{
    padding-left: 7px; 
    border-radius: 5px;
    outline: none;
    border: 1px solid lightgrey;
}
input:active, input:focus{
    border: 1px solid darkblue;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
}
input.valid{
    border-color: #2a7561;
}
input + p{
    margin: 4px; 
    width: 0;
    height: 0;
    padding:0;
    color: #999999;
    border:0;
}
input.error{
    border-color:var(--accent-color);
}
input.error + p{
    border:0;
    color:#FF3864;
    padding: 0;
    margin: 4px;
}
.credits{
    font-size: 0.75rem;
}
/*Mobile CSS */
@media screen and (max-width: 768px) {
    .columns{
        display: flex;
        flex-direction: column;
        gap: 0;
        margin: 0;
        padding: 0;
        width: 100vw;
        height: 100vh;
    }
    .col1{
        display: flex;
        width: 100vw;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    .logo img{
        width: 200px;
    }
    .col2{
        display: flex;
        flex: 1;
        width: 100vw;
        flex-direction: column;
    }
    .col2 > * {
        padding: 1rem;
    }
    .col2 button{
        display: flex;
        justify-content: center;
        padding: 1rem;
        color: white;
        border-radius: 5px;
        margin: 1rem;
        border: 0;
    }
    .formwrapper{
        display: flex;
        width: calc(100vw - 2rem);
        flex-direction: column; 
        padding: 1rem;
        margin: 0;
    } 
    form{
        display: flex;
        width: 100%;
        flex-direction: column;
    }
    fieldset{
        display: flex;
        flex-direction: column;
        border: 0;
        padding: 0;
        margin: 0;
    }
    form input{
        display: flex;
        flex-direction: column;
        margin: 0;
        width: 100%;
        box-sizing: border-box;
        height: 40px;
    }
    input + p{
        height: auto;
        font-size: 0.75rem;
        padding: 0;
        margin-top: 5px;
        width: 100%;
    }
}
/*Tablet and desktop CSS*/
@media screen and (min-width: 769px){
    .columns{
        display: flex;
        margin: 0 auto;
        width: 100vw;
        height: 100vh;
    }
    .col1{
        flex:1;
        display: flex;
        width: 20vw;
        height: 100vh;
        flex-direction: column;
    }
    .logo{
        display: flex;
        position: relative;
        top: 20vh;
        height: 12vh;
        align-items: center;
        justify-content: center;
    }
    .logo img{
        width: 100%;
        height: auto;
        object-fit: contain;
    }
    .col2{
        flex:3;
        display: flex;
        width: 80vw;
        flex-direction: column;
        justify-content: center;
    }
    .col2 > * {
        padding: 2rem;
    }
    .col2 button{
        display: flex;
        padding: 1rem;
        margin: 2rem 0rem 0rem 2rem;
        width: 250px;
        justify-content: center;
      
    }
    .formwrapper{
        display: flex;
        max-width: 80vw;
        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
    }
    form{
        display: flex;
        flex-direction: column;
        gap:2rem;
    }
    .headertext{
        width: 30vw;
    }
    fieldset{
        width: 25vw;
        display:flex;
        justify-content: space-between; 
        padding: 0;
        border: 0;
        margin: 0;
        gap: 2rem;
    }
    fieldset > *{
        display: flex;
        flex-direction: column;
    }
    fieldset input, fieldset p, fieldset label{
        width: clamp(250px, 15vw + 1rem,250px);
        height: 2rem;
    }
    fieldset p{
        font-size: 0.75rem;
    }
}

